Cambios para coolify

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -3,26 +3,35 @@ upstream wger {
 }
 
 server {
-
     listen 80;
 
+    # Encabezados para que Django reconozca bien la IP y el esquema (http/https)
     location / {
         proxy_pass http://wger;
         proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $http_x_forwarded_proto;
-        proxy_set_header X-Forwarded-Host $host:$server_port;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-Host $host;
         proxy_redirect off;
     }
 
+    # Archivos estáticos (CSS, JS, imágenes)
     location /static/ {
         alias /wger/static/;
+        access_log off;
+        expires 30d;
+        add_header Cache-Control "public";
     }
 
+    # Archivos subidos (imágenes, adjuntos)
     location /media/ {
         alias /wger/media/;
+        access_log off;
+        expires 30d;
+        add_header Cache-Control "public";
     }
 
-    # Increase max body size to allow for video uploads
+    # Aumentar el tamaño máximo del cuerpo para uploads grandes
     client_max_body_size 100M;
 }
