--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,7 +36,7 @@ services:
     depends_on:
       - web
     volumes:
-      - ./config/nginx.conf:/etc/nginx/conf.d/default.conf
+      - ./config/nginx:/etc/nginx/conf.d
       - static:/wger/static:ro
       - media:/wger/media:ro
     ports:
