--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -103,6 +103,12 @@ services:
     depends_on:
       web:
         condition: service_healthy
+    healthcheck:
+    	test: ["CMD", "celery", "-A", "wger", "inspect", "ping"]
+    	interval: 30s
+    	timeout: 10s
+    	retries: 5
+    	start_period: 60s
 
   celery_beat:
     image: wger/server:latest
