--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -104,7 +104,10 @@ services:
       web:
         condition: service_healthy
     healthcheck:
-        test: ["CMD", "celery", "-A", "wger", "inspect", "ping"]
+        test: [
+          "CMD-SHELL",
+           "export DJANGO_SETTINGS_MODULE=wger.settings.production && celery -A wger inspect ping -d celery@$(hostname) || exit 1"
+         ]
         interval: 30s
         timeout: 10s
         retries: 5
